fixed more responsive features on mobile ports

--- a/main.css
+++ b/main.css
@@ -24,6 +24,11 @@ body {
     color: #e15f41;
 }
 
+#cabecalho nav ul {
+    background-color: #fa785b;
+    border-radius: 6px;
+}
+
 #cabecalho .nav .nav-link,
 .navbar-brand,
 .navbar-brand:hover {
@@ -31,7 +36,7 @@ body {
 }
 
 .navbar-toggler {
-    background-color: #ffeae0;
+    background-color: #ffffff;
 }
 
 .section-title {
@@ -78,4 +83,8 @@ body {
     .carousel-item img {
         height:280px
     }
+
+    #cabecalho nav ul {
+        margin-top: 10px;
+}
 }
